data/derived/comb/progs/unify/prog3694.ml.out
Characters 65-99:
  total + if num mod 10 <> 0 then digitalRoot2(sumList(digits(num))) else 0;;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type int
